[project]
name = "sdvn_segment_anything"
description = "A set of nodes developed from the original Segment Anything set, to streamline and fix new library conflicts"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["segment_anything", "timm", "addict", "yapf"]

[project.urls]
Repository = "https://github.com/StableDiffusionVN/SDVN_Segment_Anything"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/StableDiffusionVN/SDVN_Segment_Anything/wiki"
"Bug Tracker" = "https://github.com/StableDiffusionVN/SDVN_Segment_Anything/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "SDVN_Segment_Anything"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

